--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
     import { Buffer } from "buffer";
     window.Buffer = Buffer;
     const global = globalThis;
+    global.Telegram = global.Telegram || {}
     window.global = global;
+
   </script>
 </head>
 
 <body>
   <div id="root"></div>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
